--- a/react_app/package.json
+++ b/react_app/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "js-cookie": "^3.0.1",
+    "js-cookies": "^1.0.4",
     "mdb-react-ui-kit": "^3.0.0",
     "mdbreact": "^5.2.0",
-    "react": "^17.0.2",
+    "react": "^18.1.0",
     "react-bootstrap": "^2.2.2",
-    "react-dom": "^17.0.2",
+    "react-cookie": "^4.1.1",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.4.0-pre.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
